[tool.poetry]
name = "cowait-sdk"
version = "0.1.0"
description = ""
authors = ["Johan Henriksson <johan@backtick.se>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.48.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
